# rules_symforce

./: .gitignore  BUILD.bazel  MODULE.bazel  requirements.in  requirements.txt  requirements_dev_py313.txt
imsym/: BUILD
imsym/opt/: types.hh
symengine_tools/: symenginepy.BUILD
symforce_tools/: BUILD  codegen.bzl  compiler.py  generate_gen.py  generate_gen_no_sym.py
symforce_tools/codegen/: cam_package_codegen_stripped.py  geo_factors_codegen_stripped.py  geo_package_codegen_stripped.py  slam_factors_codegen_stripped.py  sym_util_package_codegen_stripped.py  values_codegen.py
symforce_tools/codegen/backends/cpp/templates/: type_ops.h.jinja
symforce_tools/codegen/backends/cpp/templates/geo_package/: CLASS.h.jinja
symforce_tools/codegen/backends/cpp/templates/geo_package/ops/: group_ops.h.jinja  lie_group_ops.h.jinja
symforce_tools/codegen/lcm_templates/: symforce_types.lcm.jinja
